--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,4 +1,5 @@
 <!-- begin _includes/seo.html -->
+<!-- borrowed from: https://github.com/mmistakes/minimal-mistakes/blob/master/_includes/seo.html -->
 {%- if site.url -%}
   {%- assign seo_url = site.url | append: site.baseurl -%}
 {%- endif -%}
