--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,20 @@
 <!-- Footer -->
 <footer id="footer">
     <ul class="icons">
-        <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-        <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-        <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+        <li><a href="https://twitter.com/{{ site.twitter_username }}" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="https://www.facebook.com/{{ site.facebook_username }}" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+        <li><a href="https://instagram.com/{{ site.instagram_username }}" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="https://github.com/{{ site.github_username }}" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+        <li><a href="https://xing.com/profile/{{ site.xing_username }}" class="icon brands alt fa-xing"><span class="label">Xing</span></a></li>
+        <li><a href="mailto:{{ site.email }}" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+        <li><a href="{{ '/feed.xml' | relative_url }}" class="icon solid alt fa-rss"><span class="label">RSS</span></a></li>
     </ul>
     <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; {{ site.time | date: '%Y' }} {{ site.copyright | default: site.title }}.</li>
+        <li>Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a></li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+        <li>Ported to Jekyll by <a href="http://github.com/franzscholz/">Franz Scholz</a>.</li>
     </ul>
 </footer>
 
