--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,20 @@
 ---
 layout: default
 ---
-
-{{ content }}
+<div id="main" class="wrapper style1">
+    <div class="container">
+        {% if page.title or page.abstract %}
+        <header class="major">
+            {% if page.title %}
+            <h2>{{ page.title }}</h2>
+            {% endif %}
+            {% if page.abstract %}
+            <p>{{ page.abstract }}</p>
+            {% endif %}
+        </header>
+        {% endif %}
+        <section>
+            {{ content }}
+        </section>
+    </div>
+</div>
