--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
         {% for page in site.pages %}
         {% if page.title %}
-        <li><a href="{{ page.url }}">{{page.title}}</a></li>
+        <li><a href="{{ page.url | relative_url }}">{{page.title}}</a></li>
         {% endif %}
         {% endfor %}
         <li><a href="#">A Menu</a>
